--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ repositories {
         }
     }
 dependencies {
+	
+	compile 'org.springframework.data:spring-data-gemfire:1.6.1.RELEASE'
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-amqp")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
@@ -79,7 +81,6 @@ dependencies {
     compile("com.sun.jersey:jersey-client:1.9.1");
     compile("commons-codec:commons-codec:1.10")
     compile("com.gemstone.gemfire:gemfire:8.1.0")
-    compile('org.springframework.data:spring-data-gemfire:1.5.2.RELEASE')
     runtime("org.hsqldb:hsqldb")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
