--- a/build.gradle
+++ b/build.gradle
@@ -64,24 +64,20 @@ repositories {
         }
     }
 dependencies {
-	
+	compile 'org.springframework.hateoas:spring-hateoas:0.17.0.RELEASE'
 	compile 'org.springframework.data:spring-data-gemfire:1.6.1.RELEASE'
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-amqp")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-ws")
-    compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.springframework.boot:spring-boot-starter-groovy-templates")
     compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile("org.springframework.boot:spring-boot-starter-websocket")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.data:spring-data-rest-webmvc")
     compile("com.google.code.gson:gson:2.3.1");
     compile("com.sun.jersey:jersey-client:1.9.1");
     compile("commons-codec:commons-codec:1.10")
     compile("com.gemstone.gemfire:gemfire:8.1.0")
-    runtime("org.hsqldb:hsqldb")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
