--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot' 
+apply plugin: 'maven'
+
+group = 'org.rabbitmqclustermgr'
+version = '0.1-SNAPSHOT'
 
 jar {
     baseName = 'RabbitMQClusterMgr'
@@ -90,4 +94,18 @@ eclipse {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.12'
+}
+task writeNewPom << {
+    pom {
+        project {
+            inceptionYear '2015'
+            licenses {
+                license {
+                    name 'The Apache Software License, Version 2.0'
+                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    distribution 'repo'
+                }
+            }
+        }
+    }.writeTo("pom.xml")
 }
