--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <groupId>org.rabbitmqclustermgr</groupId>
   <artifactId>RabbitMQClusterMgr</artifactId>
   <version>0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
   <inceptionYear>2015</inceptionYear>
   <licenses>
     <license>
@@ -25,7 +26,13 @@
       <url>http://repo.springsource.org/libs-RELEASE/</url>
     </repository>
   </repositories>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.2.5.RELEASE</version>
+</parent>
   <dependencies>
+    
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
